--- a/products.html
+++ b/products.html
@@ -41,9 +41,7 @@
       <h2>Productos</h2>
       <p class="lead">Verás aquí todos los Productos de la categoría <strong> Autos. </strong></p>
     </div>
-    <div class="product-list">
-    
-    </div>
+    <div class="product-list"></div>
   </main>
   <footer class="text-muted">
     <div class="container">
