Usuario en pag princial

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form id="login">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email </label>
-        <input id="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="usuario@gmail.com">
+        <input id="email" type="email" class="form-control" aria-describedby="emailHelp" placeholder="usuario@gmail.com">
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Contraseña</label>
