--- a/inicio.html
+++ b/inicio.html
@@ -36,12 +36,12 @@
     </div>
   </nav>
   <main>
-    <div class="jumbotron text-center"></div>
-    <div class="album py-5 bg-light">
+    <div class="jumbotron text-center "></div>
+    <div class="album py-5 bg-light ">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm custom-card cursor-active" id="autos">
+          <div class="col-md-4 crece">
+            <div class="card mb-4 shadow p-2 custom-card cursor-active user-select-none" id="autos">
               <img class="bd-placeholder-img card-img-top" src="img/cars_index.jpg"
                 alt="Imgagen representativa de la categoría 'Autos'">
               <h3 class="m-3">Autos</h3>
@@ -50,8 +50,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm custom-card cursor-active" id="juguetes">
+          <div class="col-md-4 crece">
+            <div class="card mb-4 shadow p-2 custom-card cursor-active user-select-none" id="juguetes">
               <img class="bd-placeholder-img card-img-top" src="img/toys_index.jpg"
                 alt="Imgagen representativa de la categoría 'Juguetes'">
               <h3 class="m-3">Juguetes</h3>
@@ -60,8 +60,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm custom-card cursor-active" id="muebles">
+          <div class="col-md-4 crece">
+            <div class="card mb-4 shadow p-2 custom-card cursor-active user-select-none" id="muebles">
               <img class="bd-placeholder-img card-img-top" src="img/furniture_index.jpg"
                 alt="Imgagen representativa de la categoría 'Muebles'">
               <h3 class="m-3">Muebles</h3>
@@ -77,7 +77,7 @@
       </div>
     </div>
   </main>
-  <footer class="text-muted">
+  <footer class="text-muted user-select-none">
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
