--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
+  <main class="main pb-5 container">
     <div class="text-center p-4">
       <h2>Productos</h2>
       <p class="lead">Verás aquí todos los Productos de la categoría <strong id="TituloProducto"> <!--Nombre producto--> </strong></p>
