--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </nav>
-  <main class="main pb-5 container">
+  <main class="pb-5 container">
     <div class="text-center p-4">
       <h2>Productos</h2>
       <p class="lead">Verás aquí todos los Productos de la categoría <strong id="TituloProducto"> <!--Nombre producto--> </strong></p>
@@ -54,13 +54,13 @@
           </div>
         </div>
       </div>
-      <div class="container row p-0">
+      <div class="row">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
           <div class="row container p-0 m-0">
-            <div class="col p-0">
+            <div class="col">
               <p class="font-weight-normal text-end my-2">Precio:</p>
             </div>
-            <div class="col p-0">
+            <div class="col">
               <input class="form-control" type="number" placeholder="min." id="rangeFilterPriceMin">
             </div>
             <div class="col">
@@ -69,7 +69,7 @@
             <div class="col-3 p-0">
               <div class="btn-group" role="group">
                 <button class="btn btn-light btn-block" id="rangeFilterPrice">Filtrar</button>
-                <button class="btn btn-link btn-sm " id="clearRangeFilter">Limpiar</button>
+                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
               </div>
             </div>
           </div>
