--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row d-inline-flex p-2 bd-highlight">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
           <div class="row container p-0 m-0">
             <div class="col">
