css and js product

--- a/products.html
+++ b/products.html
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-    <div class="p-0 m-o product-list" id="ListaProductos"></div>
+    <div class="p-0 m-o product-list user-select-none " id="ListaProductos"></div>
   </main>
   <footer class="text-muted">
     <div class="container">
