--- a/product-info.html
+++ b/product-info.html
@@ -10,6 +10,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link" href="inicio.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -37,11 +38,31 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+   <div class="row m-0 mt-4" >
+    <div class="col m-2" id="product-info-container">
+      <h2 class="fw-bolder">Nombre de producto</h2>
+      <hr>
+      <h4 class="mb-0" >Precio</h4>
+      <p >Uyu 240</p>
+      <h4 class="mb-0">Descrición</h4>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam repellendus deserunt harum. Praesentium totam fuga voluptas, odio architecto d</p>
+      <h4 class="mb-0">Categoria</h4>
+      <p>juguete</p>
+      <h4 class="mb-0">Cantidad de vendidos</h4>
+      <p>97</p>
     </div>
+    <div class="col" id="products-img"> </div>
+   </div>
+   <div class="m-5 col-10" >
+    <h4 class="mb-4">Comentarios:</h4>
+   <ul class="list-group " id="coments-list-container" >   
+  </ul></div>
+    
+  
+    <div id></div>
+    <div class="product-list" id="product-info-container"></div>
+  </div>
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
