--- a/product-info.html
+++ b/product-info.html
@@ -39,7 +39,7 @@
   </nav>
   <main>
    <div class="row m-0 mt-4" >
-    <div class="col m-2" id="product-info-container">
+    <div class="col m-2" id="info-productos">
       <h2 class="fw-bolder">Nombre de producto</h2>
       <hr>
       <h4 class="mb-0" >Precio</h4>
@@ -51,16 +51,12 @@
       <h4 class="mb-0">Cantidad de vendidos</h4>
       <p>97</p>
     </div>
-    <div class="col" id="products-img"> </div>
+    <div class="col" id="img-productos"> </div>
    </div>
    <div class="m-5 col-10" >
     <h4 class="mb-4">Comentarios:</h4>
-   <ul class="list-group " id="coments-list-container" >   
+   <ul class="list-group " id="comentarios" >   
   </ul></div>
-    
-  
-    <div id></div>
-    <div class="product-list" id="product-info-container"></div>
   </div>
   </div>
   </main>
