--- a/inicio.html
+++ b/inicio.html
@@ -86,12 +86,13 @@
           </div>
         </div>
         <div class="row">
-          <a class="btn btn-outline-secondary p-4" href="categories.html"> Mas categorias....</a>
+          <a class="btn btn-outline-secondary p-4 " href="categories.html"> Mas categorias....</a>
         </div>
       </div>
     </div>
   </main>
-  <footer class="text-muted user-select-none">
+  <footer class="text-muted user-select-none" style="  background-color: rgb(250, 248, 248)
+  ">
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
